fix 1, overflow gdy slowo jest za długie

--- a/styles/hero.module.css
+++ b/styles/hero.module.css
@@ -75,6 +75,7 @@
   position: relative;
   background-color: var(--color-barBackground);
   padding: 50px;
+  overflow: hidden;
 }
 
 .authorImage {
